test/types/records/const-checking/todo-const-array-field.good
todo-const-array-field.chpl:14: error: illegal lvalue in assignment
todo-const-array-field.chpl:15: error: illegal lvalue in assignment
todo-const-array-field.chpl:18: error: illegal lvalue in assignment
todo-const-array-field.chpl:19: error: illegal lvalue in assignment
todo-const-array-field.chpl:21: error: done
